--- a/templates/crearusuario.html
+++ b/templates/crearusuario.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="svg" href="favicon.svg" />
+    <link rel="icon" type="svg" href="../favicon.svg" />
     <link href="../style.css" rel="stylesheet">
     <title>Crear Usuario</title>
 </head>
 <body class="body">
-    <form id="crearusuario">
-        <h1>Crear Usuario</h1>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-        <input type="submit" value="Crear Usuario">
-    </form>
+    <div class="formato">
+        <form id="crearusuario">
+            <h1 class="titulo">Crear Usuario</h1>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required>
+            <input type="submit" value="Crear Usuario">
+            <p id="message"></p>
+        </form>
+        <img class="volver" src="../volver.svg" alt="Volver" onclick="window.location.href = '../index.html'">
+    </div>
 </body>
 <script src="../scripts/crearusuario.js"></script>
 </html>
