--- a/templates/mostrarusuario.html
+++ b/templates/mostrarusuario.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="svg" href="favicon.svg" />
+    <link rel="icon" type="svg" href="../favicon.svg" />
     <link href="../style.css" rel="stylesheet">
     <title>Mostrar Usuarios</title>
 </head>
 <body class="body">
-    <h1>Usuarios Registrados en el sistema:</h1>
-    <ul class="texto"></ul>
+    <div class="formato">
+        <h1 class="titulo">Usuarios Registrados en el sistema:</h1>
+        <ul class="texto"></ul>
+        <img class="volver" src="../volver.svg" alt="Volver" onclick="window.location.href = '../index.html'">
+    </div>
 </body>
 <script src="../scripts/mostrarusuario.js"></script>
 </html>
