--- a/templates/actusuario.html
+++ b/templates/actusuario.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="svg" href="favicon.svg" />
+    <link rel="icon" type="svg" href="../favicon.svg" />
     <link href="../style.css" rel="stylesheet">
     <title>Actualizar Usuario</title>
 </head>
 <body class="body">
-    <form id="actusuario">
-        <h1>Ingrese datos a actualizar</h1>
-        <label for="id">Id:</label>
-        <input type="text" id="id" name="id" required>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-        <input type="submit" value="Actualizar Usuario">
-    </form>
+    <div class="formato">
+        <form id="actusuario">
+            <h1>Ingrese datos de usuario a actualizar</h1>
+            <label for="id">ID:</label>
+            <input type="text" id="id" name="id" required>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required>
+            <input type="submit" value="Actualizar Usuario">
+            <p id="message"></p>
+        </form>
+        <img class="volver" src="../volver.svg" alt="Volver" onclick="window.location.href = '../index.html'">
+    </div>
 </body>
 <script src="../scripts/actusuario.js"></script>
 </html>
